add get genres
