# openapi.json
@@ -11,7 +11,7 @@
     }
   ],
   "paths": {
-    "/content/search/": {
+    "/content/search": {
       "get": {
         "summary": "\u041f\u043e\u0438\u0441\u043a",
         "operationId": "search_content_search__get",
@@ -54,7 +54,7 @@
         }
       }
     },
-    "/content/details/": {
+    "/content/details": {
       "get": {
         "summary": "\u041f\u043e\u043b\u0443\u0447\u0438\u0442\u044c \u043a\u043e\u043d\u043a\u0440\u0435\u0442\u043d\u0443\u044e \u0438\u043d\u0444\u043e\u0440\u043c\u0430\u0446\u0438\u044e",
         "operationId": "get_concrete_content_details__get",
@@ -93,7 +93,7 @@
         }
       }
     },
-    "/content/translations/": {
+    "/content/translations": {
       "get": {
         "summary": "\u041f\u043e\u043b\u0443\u0447\u0438\u0442\u044c \u0441\u043f\u0438\u0441\u043e\u043a \u043f\u0435\u0440\u0435\u0432\u043e\u0434\u043e\u0432",
         "operationId": "get_content_translations_content_translations__get",
@@ -132,7 +132,7 @@
         }
       }
     },
-    "/content/movie/videos/": {
+    "/content/movie/videos": {
       "get": {
         "summary": "\u041f\u043e\u043b\u0443\u0447\u0438\u0442\u044c \u0441\u043f\u0438\u0441\u043e\u043a \u0432\u0438\u0434\u0435\u043e \u0444\u0430\u0439\u043b\u043e\u0432",
         "operationId": "get_movie_videos_content_movie_videos__get",
@@ -180,7 +180,7 @@
         }
       }
     },
-    "/content/tv_series/seasons/": {
+    "/content/tv_series/seasons": {
       "get": {
         "summary": "\u041f\u043e\u043b\u0443\u0447\u0438\u0442\u044c \u0441\u043f\u0438\u0441\u043e\u043a \u0441\u0435\u0437\u043e\u043d\u043e\u0432 \u0441\u0435\u0440\u0438\u0430\u043b\u0430 \u0438 \u044d\u043f\u0438\u0437\u043e\u0434\u043e\u0432 \u0432 \u043e\u0437\u0432\u0443\u0447\u043a\u0435",
         "operationId": "get_tv_series_seasons_content_tv_series_seasons__get",
@@ -228,7 +228,7 @@
         }
       }
     },
-    "/content/tv_series/videos/": {
+    "/content/tv_series/videos": {
       "get": {
         "summary": "\u041f\u043e\u043b\u0443\u0447\u0438\u0442 \u0432\u0438\u0434\u0435\u043e \u0444\u0430\u0439\u043b\u044b \u0434\u043b\u044f \u0441\u0435\u0440\u0438\u0430\u043b\u0430",
         "operationId": "get_tv_series_videos_content_tv_series_videos__get",
@@ -320,7 +320,6 @@
                 "soon",
                 "watching"
               ]
-
             },
             "name": "filter",
             "in": "query"
@@ -355,6 +354,48 @@
                   "type": "array",
                   "items": {
                     "$ref": "#/components/schemas/Data"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/content/genres": {
+      "get": {
+        "summary": "\u041f\u043e\u043b\u0443\u0447\u0438\u0442\u044c \u0432\u0441\u0435 \u0436\u0430\u043d\u0440\u044b",
+        "operationId": "get_content_genres__get",
+        "parameters": [
+          {
+            "required": true,
+            "style": "form",
+            "explode": true,
+            "description": "\u0422\u0438\u043f \u043a\u043e\u043d\u0442\u0435\u043d\u0442\u0430",
+            "schema": {
+              "title": "Type",
+              "type": "string",
+              "default": "films",
+              "enum": [
+                "films",
+                "series",
+                "cartoons",
+                "animation"
+              ]
+            },
+            "name": "type",
+            "in": "query"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Genre"
                   }
                 }
               }
@@ -601,15 +642,15 @@
       "Translations": {
         "type": "object",
         "properties": {
-          "HDrezka Studio":{
+          "HDrezka Studio": {
             "type": "string",
             "example": 111
           },
-          "TVShows":{
+          "TVShows": {
             "type": "string",
             "example": 232
           },
-          "GurGurStudio":{
+          "GurGurStudio": {
             "type": "string",
             "example": 465
           }
@@ -703,6 +744,27 @@
                 }
               }
             }
+          }
+        }
+      },
+      "Genre": {
+        "title": "Genre",
+        "type": "object",
+        "properties": {
+          "name": {
+            "title": "name",
+            "type": "string",
+            "example": "\u0412\u0435\u0441\u0442\u0435\u0440\u043d\u044b"
+          },
+          "name_en": {
+            "title": "name_en",
+            "type": "string",
+            "example": "western"
+          },
+          "url": {
+            "title": "url",
+            "type": "string",
+            "example": "/films/western/"
           }
         }
       }
